First attempt of fixing the colors on Safari.
Colors can't be reversed on Safari.

--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ html {
 body {
     margin: 0;
     background: var(--primary-color);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
 }
 
 #icon {
